--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    	<meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width">
+	    <title>Syeda Islam Junior Portfolio</title>
+	    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <h1></h1>
+  </body>
+</html>
