--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    	<meta charset="utf-8">
+    	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width">
 	    <title>Syeda Islam Junior Portfolio</title>
 	    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1></h1>
+	  <h1>Hello, I'm Syeda Islam</h1>
+	  <h4>This is my Junior year in Thomas A. Edison CTE High School. Navigate through the top right hand corner to see my work!</h4>
   </body>
 </html>
