--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
 	  <h1>Hello, I'm Syeda Islam</h1>
-	  <h4>This is my Junior year in Thomas A. Edison CTE High School. Navigate through the top right hand corner to see my work!</h4>
+	  <h4>This is my Junior year in Thomas A. Edison CTE High School learning programming and prototyping. Navigate through the top right hand corner to see my work!</h4>
+	  <nav>
+		<a href="index.html">Home</a>
+		<a href="bio.html">Bio</a>
+		<a href="cfu.html">CFU's</a>
+		<a href="nb.html">Digital Notebook</a>
+	  </nav>
   </body>
 </html>
