--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
 	  <h1>Hello, I'm Syeda Islam</h1>
 	  <h4>This is my Junior year in Thomas A. Edison CTE High School learning programming and prototyping. Navigate through the top right hand corner to see my work!</h4>
+	  <div class=links></div>                                                                                 
 	  <nav>
 		<a href="index.html">Home</a>
 		<a href="bio.html">Bio</a>
