--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 	    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+	  <div class=intro>
 	  <h1>Hello, I'm Syeda Islam</h1>
-	  <h4>This is my Junior year in Thomas A. Edison CTE High School learning programming and prototyping. Navigate through the top right hand corner to see my work!</h4>
-	  <div class=links></div>                                                                                 
+	  <h4>Navigate through the top right hand corner to see my work!</h4>
+	  </div>
+	  <div class=links>                                                                                
 	  <nav>
 		<a href="index.html">Home</a>
 		<a href="bio.html">Bio</a>
-		<a href="cfu.html">CFU's</a>
 		<a href="nb.html">Digital Notebook</a>
+		<a href="cfu.html">CFU's</a>
+		<a href="labs.html">Labs</a>
 	  </nav>
+	  </div> 
   </body>
 </html>
