--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	    <meta name="viewport" content="width=device-width">
 	    <title>Syeda Islam Junior Portfolio</title>
 	    <link href="style.css" rel="stylesheet" type="text/css" />
+	    <link href="favicon.png" rel="icon" type="image/png">
   </head>
   <body>
 	  <div class=intro>
