--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    	    <meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width">
-	    <title>Syeda Islam Junior Portfolio</title>
-	    <link href="style.css" rel="stylesheet" type="text/css" />
-	    <link href="syeda favicon.png" rel="icon" type="image/png">
+    <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width">
+	  <title>Syeda Islam Junior Portfolio</title>
+	  <link href="style.css" rel="stylesheet" type="text/css" />
+	  <link href="favicon.png" rel="icon" type="image/png">
   </head>
   <body>
-	  <div class=intro>
-	  <h1>Hello, I'm Syeda Islam</h1>
-	  <h4>Navigate through the top right hand corner to see my work!</h4>
+	  <div class="intro">
+	   <h1>Hello, I'm Syeda Islam!</h1>
+	   <p>Navigate through the top right hand corner to see my work.</p>
 	  </div>
-	  <div class=links>                                                                                
-	  <nav>
-		<a href="index.html">Home</a>
-		<a href="bio.html">Bio</a>
-		<a href="nb.html">Digital Notebook</a>
-		<a href="cfu.html">CFU's</a>
-		<a href="labs.html">Labs</a>
-	  </nav>
+	  <div class="links">                                                                                
+	   <nav>
+		  <a href="index.html">Home</a>
+		  <a href="bio.html">Bio</a>
+		  <a href="nb.html">Digital Notebook</a>
+		  <a href="cfu.html">CFU's</a>
+		  <a href="labs.html">Labs</a>
+	   </nav>
 	  </div> 
   </body>
 </html>
