--- a/labs.html
+++ b/labs.html
@@ -1,1 +1,51 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Syeda Islam Junior Portfolio</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="favicon.png" rel="icon" type="image/png">
+  </head>
+  <body>
+    <div class="links">                                                                                
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="bio.html">Bio</a>
+        <a href="nb.html">Digital Notebook</a>
+        <a href="cfu.html">CFU's</a>
+        <a href="labs.html">Labs</a>
+      </nav>
+    </div>
+    <div class="introLABS">
+      <h1>Labs</h1>
+      <h1>   </h1>
+      <h3>These are the labs or ending assignments on ProjectStem to test my knowledge.</h3>
+    </div>
+    <div class="ps">
+      <p>PS Assignment 1: Silly Sentences</p>
+      <p>Below you will instructions of the assignemnt and a video of my code.</p>
+      <img src="PSassignements/ps1.png" alt="PS Assignment 1 Instructions" width="750" height="400">
+      <div class="ps1code">
+      <pre><code>
+print("Let's play Silly Sentences!")
+name = input("Enter a name: ")
+adjective1 = input("Enter an adjective: ")
+adjective2 = input("Enter an adjective: ")
+adverb = input("Enter an adverb: ")
+food1 = input("Enter a food: ")
+food2 = input("Enter another food: ")
+noun = input("Enter a noun: ")
+place = input("Enter a place: ")
+verb = input("Enter a verb: ")
+print(name + " was planning a dream vacation to " + place + ".")
+print(name + " was especially looking forward to trying the local cuisine, including " + adjective1,food1 + " and " + food2 + ".")
+print(name + " will have to practice the language " + adverb + " to make it easier to " + verb + " with people.")
+print(name + " has a long list of sights to see, including the " + noun + " museum and the " + adjective2 + " park.")
+      </code></pre>
+      </div>
+    </div>
+    <div class="ps">
+    </div>
+  </body>
+</html>
