--- a/nb.html
+++ b/nb.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Syeda Islam Junior Portfolio</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="favicon.png" rel="icon" type="image/png">
+  </head>
+  <body>
+    <div class="links">                                                                                
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="bio.html">Bio</a>
+        <a href="nb.html">Digital Notebook</a>
+        <a href="cfu.html">CFU's</a>
+        <a href="labs.html">Labs</a>
+      </nav>
+    </div>
+    <div class="introNB">
+      <h1>Digital Notebook</h1>
+      <h3>Python is a very popular language used by many software developers. It is very effiecent, cheap and easy to learn. These are my digital notes of what I have learned through ProjectStem. </h3>
+    </div>
+    <div class="unit1">
+      <p>Description of Unit 1: This unit is about the basics of computer science and python. I learned parts of the computer, different types of data and output and input.</p>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRRFQDZVIAza9BqKaCPIFRWHWUShsw-A3sPw6Ytd0wWYCtl88K0Mad2Bn7al6gFA3JQX4qpD2c0mmoG/embed?start=false&loop=false&delayms=3000" frameborder="0" width="816" height="1085" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </div>
+    <div class="unit2">
+      <p>Description of Unit 2: This unit is about computer history, mathematics in python, and big data.</p>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQuumhP3FV-de0zqVZACepZAa0W7avtMbft0u_j132mzG65IlKZi1uhOLT_K_xjWvXE6S3M_3Sp7Ajw/embed?start=false&loop=false&delayms=3000" frameborder="0" width="816" height="1085" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </div>
+    <div class="unit3">
+      <p>Description of Unit 3: This unit is mainly about functions and algorithms.</p>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTC48D_zxuzs5hBsKjyPxn2wUQVNYJKBefeurkmQMy6h4S5R4jz3WZ0n1MlNXFHQRpLxKX-NbFCN5Xs/embed?start=false&loop=false&delayms=3000" frameborder="0" width="816" height="1085" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </div>
+    <div class="unit4">
+      <p>Description of Unit 4: This unit is about mainly about looping and modeling and simulations. </p>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTVelHz7wsvYnyAl9ZSJMO9US4aTeNs3-ejVlYFDKLGSB0bwNQIDcFi3dSEbL_5Y21ySr7WdmzCQeJ2/embed?start=false&loop=false&delayms=3000" frameborder="0" width="816" height="1085" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </div>
+  </body>
+</html>
