--- a/labs.html
+++ b/labs.html
@@ -25,7 +25,7 @@
     <div class="ps">
       <p>PS Assignment 1: Silly Sentences</p>
       <p>Below you will instructions of the assignemnt and a video of my code.</p>
-      <img src="PSassignements/ps1.png" alt="PS Assignment 1 Instructions" width="750" height="400">
+      <img src="PSassignment/ps1.png" alt="PS Assignment 1 Instructions" width="750" height="400">
       <div class="ps1code">
       <pre><code>
 print("Let's play Silly Sentences!")
