--- a/labs.html
+++ b/labs.html
@@ -24,28 +24,19 @@
     </div>
     <div class="ps">
       <p>PS Assignment 1: Silly Sentences</p>
-      <p>Below you will instructions of the assignemnt and a video of my code.</p>
+      <p>Below you will see instructions of the assignemnt and my code.</p>
       <img src="PSassignment/ps1.png" alt="PS Assignment 1 Instructions" width="750" height="400">
       <div class="ps1code">
-      <pre><code>
-print("Let's play Silly Sentences!")
-name = input("Enter a name: ")
-adjective1 = input("Enter an adjective: ")
-adjective2 = input("Enter an adjective: ")
-adverb = input("Enter an adverb: ")
-food1 = input("Enter a food: ")
-food2 = input("Enter another food: ")
-noun = input("Enter a noun: ")
-place = input("Enter a place: ")
-verb = input("Enter a verb: ")
-print(name + " was planning a dream vacation to " + place + ".")
-print(name + " was especially looking forward to trying the local cuisine, including " + adjective1,food1 + " and " + food2 + ".")
-print(name + " will have to practice the language " + adverb + " to make it easier to " + verb + " with people.")
-print(name + " has a long list of sights to see, including the " + noun + " museum and the " + adjective2 + " park.")
-      </code></pre>
+        <iframe src="https://py3.codeskulptor.org/#user309_LUgj5XYS5MCQdVD.py" width="750" height="400"></iframe>
       </div>
     </div>
     <div class="ps">
+      <p>PS Assignment 2: Room Area</p>
+      <p>Below you will see instructions of the assignemnt and my code.</p>
+      <img src="" alt="PS Assignment 2 Instructions" width="750" height="400">
+      <div class="ps2code">
+        
+      </div>
     </div>
   </body>
 </html>
